@@ -1,3 +1,10 @@
+2014-10-08  Teresa Johnson  <tejohnson@google.com>
+
+	PR bootstrap/63432.
+	* tree-ssa-threadupdate.c (estimated_freqs_path): New function.
+	(ssa_fix_duplicate_block_edges): Invoke it.
+	(mark_threaded_blocks): Make two passes to avoid ordering dependences.
+
 2014-10-08  Oleg Endo  <olegendo@gcc.gnu.org>
 
 	PR target/52941
